<resources>
    <string name="app_name">FinBuddy</string>
    <string name="app_motto">Keep You Financially Safe and Sound</string>
    <string name="email_txt">Email</string>
    <string name="password_txt">Password</string>
    <string name="login_txt">login</string>
    <string name="create_account_txt">Create Account</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="name_txt">Name</string>
    <string name="confirm_password_txt">Confirm Password</string>
    <string name="profile_image_txt">profile image</string>
    <string name="profile_image_button">profile image button</string>
    <string name="profile_txt">Profile</string>
    <string name="choose_image_txt">Choose Image</string>
    <string name="camera_txt">Camera</string>
    <string name="gallery_txt">Gallery</string>
    <string name="cancel">cancel</string>
    <string name="all_fields_are_mandatory">All fields are mandatory</string>
    <string name="password_mismatch">Passwords are not matching.</string>
    <string name="error_message">Oops!!! Something went wrong, Please try again later.</string>
    <string name="email_mandatory">Please enter the email address</string>
    <string name="email_sent_txt">Reset password email sent</string>
    <string name="sample_username">John Smith</string>
    <string name="bill_txt">Add Bill</string>
    <string name="shop_name_txt">Shop Name</string>
    <string name="date_txt">Date</string>
    <string name="total_txt">Total:</string>
    <string name="sample_rate">110.00</string>
    <string name="add_item_txt">Add Item</string>
    <string name="save_txt">Save</string>
    <string name="bill_item_serial_number">1.</string>
    <string name="sample_bill_item_title">Oats</string>
    <string name="sample_bill_item_qty">Qty: 2</string>
    <string name="sample_bill_item_price">Price: 50</string>
    <string name="quantity_txt">Quantity</string>
    <string name="price_txt">Price</string>
    <string name="qty_txt">Qty: </string>
    <string name="price_disp_txt">Price: </string>
    <string name="item_count_txt">"Item Count: "</string>
    <string name="overview_txt">Overview</string>
    <string name="browse_txt">Browse</string>
    <string name="settings_txt">Settings</string>
    <string name="list_view">List View</string>
    <string name="from_txt">From:</string>
    <string name="sample_date_txt">April 1, 2020</string>
    <string name="to_txt">To:</string>
    <string name="sample_date1_txt">April 3, 2020</string>
    <string name="category_txt">Category</string>
    <string name="category_txt_with_colon">Category:</string>
    <string name="update_bill">Update Bill</string>
    <string name="update_txt">Update</string>
    <string name="delete_txt">Delete</string>
    <string name="total_expense_distribution_txt">Total expense distribution</string>
    <string name="expense_distribution_txt">Expense Distribution</string>
    <string name="category_distribution_txt">Distribution by category</string>
    <string name="top_expenses_txt">Top 5 Expenses</string>
    <string name="expense_category_distribution_txt">Expense Category Distribution</string>
    <string name="sample_category">Electronics</string>
    <string name="change_password_txt">Change Password</string>
    <string name="sign_out_txt">Sign Out</string>
</resources>
