<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:padding="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/overview_bill_title"
            android:text="@string/sample_bill_item_title"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/overview_bill_price"
            android:text="@string/sample_rate"
            android:layout_alignTop="@+id/overview_bill_title"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/overview_bill_category"
            android:textStyle="italic"
            android:layout_below="@+id/overview_bill_title"
            android:text="@string/sample_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/overview_bill_date"
            android:textStyle="italic"
            android:layout_below="@+id/overview_bill_category"
            android:text="@string/sample_date1_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>