<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_margin="16dp"
    tools:context=".fragments.SettingsFragment">

    <ImageView
        android:id="@+id/settings_profile_picture"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="8dp"
        android:contentDescription="@string/profile_image_button"
        android:src="@drawable/ic_account_icon" />

    <TextView
        android:id="@+id/settings_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_username"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/settings_change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/change_password_txt"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/settings_sign_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/sign_out_txt"
            android:textColor="@color/design_default_color_error"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>