<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".activities.LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="12dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/login_app_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/almendra_bold"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimary"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/login_app_motto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/almendra_italic"
                android:text="@string/app_motto"
                android:textSize="12sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:autofillHints=""
                android:hint="@string/email_txt"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:drawableLeft="@drawable/ic_email_icon"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:autofillHints=""
                android:hint="@string/password_txt"
                android:inputType="textPassword"
                android:maxLines="1"
                android:drawableLeft="@drawable/ic_password_icon"
                android:textSize="14sp" />

            <ProgressBar
                android:id="@+id/login_progressbar"
                android:visibility="gone"
                android:padding="5dp"
                android:layout_width="50dp"
                android:layout_height="50dp" />

            <Button
                android:id="@+id/login_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/transparent_button_with_border"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:text="@string/login_txt" />

            <Button
                android:id="@+id/login_forgot_button"
                android:text="@string/forgot_password"
                android:background="@android:color/transparent"
                android:padding="8dp"
                android:textSize="11sp"
                android:textStyle="bold"
                android:layout_margin="2dp"
                android:textColor="@android:color/holo_red_dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/login_create_account_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:drawableLeft="@drawable/ic_account_icon"
                android:background="@android:color/transparent"
                android:padding="8dp"
                android:text="@string/create_account_txt"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>