<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/image_option_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/almendra_bold"
        android:text="@string/choose_image_txt"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/image_capture_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawableStart="@android:drawable/ic_menu_camera"
        android:gravity="fill"
        android:padding="12dp"
        android:text="@string/camera_txt" />

    <Button
        android:id="@+id/image_capture_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawableStart="@android:drawable/ic_menu_gallery"
        android:gravity="fill"
        android:padding="12dp"
        android:text="@string/gallery_txt" />

</LinearLayout>