<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.HomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="8dp">

        <TextView
            android:id="@+id/homepage_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/almendra_bold"
            android:text="@string/app_name"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/homepage_app_motto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/almendra_italic"
            android:text="@string/app_motto"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/homepage_app_name"
            app:layout_constraintTop_toBottomOf="@+id/homepage_app_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/homepage_tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:tabGravity="fill"
        app:tabTextAppearance="@style/TabTextStyle"
        app:tabIconTint="@android:color/white"
        app:tabIndicatorHeight="3dp"
        app:tabIndicatorColor="@color/colorPrimaryLight"
        app:tabTextColor="@android:color/white">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_overview_white"
            android:text="@string/overview_txt" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_browse_white"
            android:text="@string/list_view" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_settings_white"
            android:text="@string/settings_txt" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/homepage_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>