<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_item_modal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/add_item_txt"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="18sp"
            android:textStyle="bold" />

            <EditText
                android:id="@+id/add_item_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/name_txt"
                android:inputType="textPersonName"
                android:padding="8dp" />

        <EditText
            android:id="@+id/add_item_qty_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/quantity_txt"
            android:inputType="number"
            android:padding="8dp" />

        <EditText
            android:id="@+id/add_item_price_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="4dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/price_txt"
            android:inputType="numberDecimal"
            android:padding="8dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <Button
                    android:id="@+id/add_item_save_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/save_txt"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/add_item_cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:background="@android:color/transparent"
                    android:text="@string/cancel"
                    android:textColor="@android:color/holo_red_dark"
                    app:layout_constraintBottom_toBottomOf="@+id/add_item_save_button"
                    app:layout_constraintEnd_toStartOf="@+id/add_item_save_button"
                    app:layout_constraintTop_toTopOf="@+id/add_item_save_button" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
</androidx.cardview.widget.CardView>